# UNET-Echocardiography-ROI-segmentation

./: .commitmsg  .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  Interpolating training DICE.ipynb  JOSS_CHECKLIST.md  LICENSE  MANIFEST.in  MODEL_CARD.md  Makefile  PROJECT_STRUCTURE.md  README.md  README_simple.md  REAL_DATA_GUIDE.md  REPOSITORY_STATUS.md  TECHNICAL_SPECS.md  UNET-based ECHO-sector ROI extractor and deidentifier model.ipynb  create_sample_data.py  dicom_video_showcase.py  example_usage.py  paper.bib  paper.md  pyproject.toml  requirements.txt  setup.py  tox.ini  unet_inference.py
.github/workflows/: ci.yml  draft-pdf.yml
echoroi/: __init__.py  cli.py  inference.py  model.py  preprocessing.py  training.py
examples/: README.md  basic_usage.py  batch_processing.py
models/: echoroi_unified.keras  echoroi_unified.onnx  unet_EchoROI_training_log.csv  unet_EchoRoi.keras
notebooks/: 01_training_and_evaluation.ipynb  02_onnx_conversion.ipynb  03_inference_demo.ipynb  04_dataset_preprocessing.ipynb
paper/: paper.bib  paper.docx  paper.md
scripts/: convert_labelme_to_masks.py  convert_to_onnx.py
tests/: conftest.py  run_tests.py  test_cli.py  test_model.py  test_preprocessing.py  test_segmentation.py
training_results/: README.md  dataset_summary.json  metrics.json  training_log.csv
unet_roi/: __init__.py  cli.py  inference.py  model.py  preprocessing.py  training.py
